// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`openSwapDepositChannel creates channel and stores channel and quote in the database 1`] = `
[
  [
    {
      "ccmParams": undefined,
      "destAddress": "5FAGoHvkBsUMnoD3W95JoVTvT8jgeFpjhFK8W73memyGBcBd",
      "destAsset": "DOT",
      "destChain": "Polkadot",
      "expectedDepositAmount": "1000",
      "quote": {
        "egressAmount": "250",
        "estimatedPrice": "0.375",
        "intermediateAmount": "500",
      },
      "srcAsset": "FLIP",
      "srcChain": "Ethereum",
    },
    {
      "url": "",
    },
    "perseverance",
  ],
]
`;

exports[`openSwapDepositChannel creates channel and stores channel and quote in the database 2`] = `
{
  "brokerCommissionBps": 0,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "channelId": 888n,
  "chunkIntervalBlocks": null,
  "createdAt": Any<ClockDate>,
  "depositAddress": "address",
  "destAddress": "5FAGoHvkBsUMnoD3W95JoVTvT8jgeFpjhFK8W73memyGBcBd",
  "destAsset": "Dot",
  "estimatedExpiryAt": 2023-11-09T12:55:00.000Z,
  "expectedDepositAmount": "1000",
  "expiryBlock": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 123,
  "maxBoostFeeBps": 0,
  "numberOfChunks": 1,
  "openedThroughBackend": true,
  "openingFeePaid": "100",
  "quote": {
    "depositAmount": "1000",
    "destAsset": "Dot",
    "egressAmount": "250",
    "estimatedPrice": "0.375",
    "executedPrice": null,
    "executedSlippagePercentage": null,
    "id": Any<Number>,
    "intermediateAmount": "500",
    "isBoost": false,
    "isDca": false,
    "srcAsset": "Flip",
    "swapDepositChannelId": Any<BigInt>,
  },
  "srcAsset": "Flip",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 1000n,
}
`;

exports[`openSwapDepositChannel creates channel and stores it in the database 1`] = `
[
  [
    {
      "ccmParams": undefined,
      "destAddress": "5FAGoHvkBsUMnoD3W95JoVTvT8jgeFpjhFK8W73memyGBcBd",
      "destAsset": "DOT",
      "destChain": "Polkadot",
      "expectedDepositAmount": "777",
      "srcAsset": "FLIP",
      "srcChain": "Ethereum",
    },
    {
      "url": "",
    },
    "perseverance",
  ],
]
`;

exports[`openSwapDepositChannel creates channel and stores it in the database 2`] = `
{
  "brokerCommissionBps": 0,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "channelId": 888n,
  "chunkIntervalBlocks": null,
  "createdAt": Any<ClockDate>,
  "depositAddress": "address",
  "destAddress": "5FAGoHvkBsUMnoD3W95JoVTvT8jgeFpjhFK8W73memyGBcBd",
  "destAsset": "Dot",
  "estimatedExpiryAt": 2023-11-09T12:55:00.000Z,
  "expectedDepositAmount": "777",
  "expiryBlock": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 123,
  "maxBoostFeeBps": 0,
  "numberOfChunks": 1,
  "openedThroughBackend": true,
  "openingFeePaid": "100",
  "quote": null,
  "srcAsset": "Flip",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 1000n,
}
`;

exports[`openSwapDepositChannel creates channel with boost fee and stores it in the database 1`] = `
[
  [
    {
      "ccmParams": undefined,
      "destAddress": "0xFcd3C82b154CB4717Ac98718D0Fd13EEBA3D2754",
      "destAsset": "USDC",
      "destChain": "Ethereum",
      "expectedDepositAmount": "10101010",
      "maxBoostFeeBps": 100,
      "srcAsset": "FLIP",
      "srcChain": "Ethereum",
    },
    {
      "url": "",
    },
    "perseverance",
  ],
]
`;

exports[`openSwapDepositChannel creates channel with boost fee and stores it in the database 2`] = `
{
  "brokerCommissionBps": 0,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "channelId": 909n,
  "chunkIntervalBlocks": null,
  "createdAt": Any<ClockDate>,
  "depositAddress": "address",
  "destAddress": "0xFcd3C82b154CB4717Ac98718D0Fd13EEBA3D2754",
  "destAsset": "Usdc",
  "estimatedExpiryAt": 2023-11-09T12:55:00.000Z,
  "expectedDepositAmount": "10101010",
  "expiryBlock": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 123,
  "maxBoostFeeBps": 100,
  "numberOfChunks": 1,
  "openedThroughBackend": true,
  "openingFeePaid": "0",
  "srcAsset": "Flip",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 1000n,
}
`;

exports[`openSwapDepositChannel creates channel with ccmParams and stores it in the database 1`] = `
[
  [
    {
      "ccmParams": {
        "gasBudget": "0x1e848",
        "message": "0xdeadc0de",
      },
      "destAddress": "0xFcd3C82b154CB4717Ac98718D0Fd13EEBA3D2754",
      "destAsset": "USDC",
      "destChain": "Ethereum",
      "expectedDepositAmount": "10101010",
      "srcAsset": "FLIP",
      "srcChain": "Ethereum",
    },
    {
      "url": "",
    },
    "perseverance",
  ],
]
`;

exports[`openSwapDepositChannel creates channel with ccmParams and stores it in the database 2`] = `
{
  "brokerCommissionBps": 0,
  "ccmGasBudget": "125000",
  "ccmMessage": "0xdeadc0de",
  "channelId": 909n,
  "chunkIntervalBlocks": null,
  "createdAt": Any<ClockDate>,
  "depositAddress": "address",
  "destAddress": "0xFcd3C82b154CB4717Ac98718D0Fd13EEBA3D2754",
  "destAsset": "Usdc",
  "estimatedExpiryAt": 2023-11-09T12:55:00.000Z,
  "expectedDepositAmount": "10101010",
  "expiryBlock": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 123,
  "maxBoostFeeBps": 0,
  "numberOfChunks": 1,
  "openedThroughBackend": true,
  "openingFeePaid": "10",
  "srcAsset": "Flip",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 1000n,
}
`;

exports[`openSwapDepositChannel creates channel with fill or kill params and stores it in the database 1`] = `
[
  [
    {
      "ccmParams": undefined,
      "dcaParams": {
        "chunkIntervalBlocks": 2,
        "numberOfChunks": 3,
      },
      "destAddress": "0xFcd3C82b154CB4717Ac98718D0Fd13EEBA3D2754",
      "destAsset": "USDC",
      "destChain": "Ethereum",
      "expectedDepositAmount": "10101010",
      "fillOrKillParams": {
        "minPriceX128": "10000000000000",
        "refundAddress": "0xa56A6be23b6Cf39D9448FF6e897C29c41c8fbDFF",
        "retryDurationBlocks": 500,
      },
      "srcAsset": "FLIP",
      "srcChain": "Ethereum",
    },
    {
      "url": "",
    },
    "perseverance",
  ],
]
`;

exports[`openSwapDepositChannel creates channel with fill or kill params and stores it in the database 2`] = `
{
  "brokerCommissionBps": 0,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "channelId": 909n,
  "chunkIntervalBlocks": 2,
  "createdAt": Any<ClockDate>,
  "depositAddress": "address",
  "destAddress": "0xFcd3C82b154CB4717Ac98718D0Fd13EEBA3D2754",
  "destAsset": "Usdc",
  "estimatedExpiryAt": 2023-11-09T12:55:00.000Z,
  "expectedDepositAmount": "10101010",
  "expiryBlock": null,
  "fokMinPriceX128": "10000000000000",
  "fokRefundAddress": "0xa56A6be23b6Cf39D9448FF6e897C29c41c8fbDFF",
  "fokRetryDurationBlocks": 500,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 123,
  "maxBoostFeeBps": 0,
  "numberOfChunks": 3,
  "openedThroughBackend": true,
  "openingFeePaid": "10",
  "srcAsset": "Flip",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 1000n,
}
`;
